Update Mobile sample